added random map test

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <ul id="content">
         <li id="display_container"></div>
-        <li id="hud"><h1>Dead Zed</h1></div>
+        <li id="hud">
+            <div id="version">Dead Zed v0.0</div>
+        </li>
     </ul>
 </body>
 </html>
