--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/hud.css">
     <script language="javascript" type="text/javascript" src="js/libs/rot.js"></script>
     <script language="javascript" type="text/javascript" src="js/libs/jquery.js"></script>
+    <script language="javascript" type="text/javascript" src="js/utils.js"></script>
     <script language="javascript" type="text/javascript" src="js/startup.js"></script>
 
 </head>
