--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul id="content">
         <li id="display_container"></div>
         <li id="hud">
+            <button id="reset">Reset</button>
             <div id="version">Dead Zed v0.0</div>
         </li>
     </ul>
