--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
     <title>Dead Zed 0.0</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/hud.css">
-    <script language="javascript" type="text/javascript" src="js/libs/rot.js"></script>
-    <script language="javascript" type="text/javascript" src="js/libs/jquery.js"></script>
-    <script language="javascript" type="text/javascript" src="js/utils.js"></script>
-    <script language="javascript" type="text/javascript" src="js/startup.js"></script>
-
 </head>
 <body>
     <ul id="content">
@@ -17,5 +13,10 @@
             <div id="version">Dead Zed v0.0</div>
         </li>
     </ul>
+
+    <script language="javascript" type="text/javascript" src="js/libs/rot.js"></script>
+    <script language="javascript" type="text/javascript" src="js/libs/jquery.js"></script>
+    <script language="javascript" type="text/javascript" src="js/utils.js"></script>
+    <script language="javascript" type="text/javascript" src="js/startup.js"></script>
 </body>
 </html>
