--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
     <title>Dead Zed 0.0</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/ui-lightness/lightness-min.css">
     <link rel="stylesheet" type="text/css" href="css/hud.css">
 </head>
 <body>
     <ul id="content">
         <li id="display_container"></div>
         <li id="hud">
-            <button id="reset">Reset</button>
+            <button id="reset">Gen</button>
+            Scale: <input type="text" id="amount" style="color:black">
+            <div id="slider"></div>
             <div id="version">Dead Zed v0.0</div>
         </li>
     </ul>
 
     <script language="javascript" type="text/javascript" src="js/libs/rot.js"></script>
     <script language="javascript" type="text/javascript" src="js/libs/jquery.js"></script>
-    <script language="javascript" type="text/javascript" src="js/utils.js"></script>
-    <script language="javascript" type="text/javascript" src="js/startup.js"></script>
+    <script language="javascript" type="text/javascript" src="js/libs/jquery-ui.js"></script>
+    <script language="javascript" type="text/javascript" src="js/zed.js"></script>
+    <script language="javascript" type="text/javascript" src="js/ui.js"></script>
+    <script language="javascript" type="text/javascript" src="js/display.js"></script>
+    <script language="javascript" type="text/javascript" src="js/map.js"></script>
 </body>
 </html>
