--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <script language="javascript" type="text/javascript" src="js/ui.js"></script>
     <script language="javascript" type="text/javascript" src="js/display.js"></script>
     <script language="javascript" type="text/javascript" src="js/map.js"></script>
+    <script language="javascript" type="text/javascript" src="js/camera.js"></script>
 </body>
 </html>
