server/client thread based architecture

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,7 @@
     <ul id="content">
         <li id="display_container"></li>
         <li id="hud">
-            <button id="reset">Gen</button>
-            Scale: <input type="text" id="amount" style="color:black">
-            <div id="slider"></div>
+            <img src="/images/logo.png" />
             <div id="version">Dead Zed v0.0</div>
         </li>
     </ul>
@@ -19,6 +17,6 @@
     <script src="jquery/dist/jquery.js"></script>
     <script src="jquery-ui/ui/jquery-ui.js"></script>
     <script src="noisejs/index.js"></script>
-    <script language="javascript" type="text/javascript" src="app.js"></script>
+    <script language="javascript" type="text/javascript" src="client.js"></script>
 </body>
 </html>
